fix: uneven columns in tech stack

--- a/app/css/custom-styles.css
+++ b/app/css/custom-styles.css
@@ -453,7 +453,7 @@ body.subscriptions .learn-more-button {
 
     .stack-carrousel {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr auto;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
         grid-template-rows: repeat(9, auto);
         grid-auto-flow: column;
         gap: 18px
